# warn-scraper

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  alerts.py  az_add_links_tofile.py  combine_ne_scrapers.py  de_add_affected_employees.py  delaware_warn.html  out.txt  out.txtvi  pt_2_try_mich.py  pyproject.toml  remove_data.py  requirements.txt  run_scrapers.py  scrape_warn.py  scrape_warn.sh  setup.cfg  setup.py  tally_sources.py  try_michigan.py  try_regex.py  utils.py  warn_scraper_al.py  warn_scraper_az.py  warn_scraper_ca.py  warn_scraper_dc.py  warn_scraper_de.py  warn_scraper_fl.py  warn_scraper_in.py  warn_scraper_ks.py  warn_scraper_md.py  warn_scraper_mi.py  (+15 more)
.devcontainer/: devcontainer.json
.github/workflows/: WARN.yml  continuous-deployment.yml  tests.yml
data/: alabama_warn_raw.csv  arizona_warn_raw.csv  districtcolumbia_warn_raw.csv  florida_warn_raw.csv  indiana_warn_raw.csv  maryland_warn_raw.csv  michigan_warn_raw.csv  missouri_warn_raw.csv  nebraska_warn_raw.csv  nebraska_warn_raw1.csv  nebraska_warn_raw2.csv  newjersey_warn_raw.csv  ohio_warn_raw.csv  oklahoma_warn_raw.csv  oregon_warn_raw.csv  rhodeisland_warn_raw.csv  southdakota_warn_raw.csv  tennessee_warn_raw.csv  utah_warn_raw.csv  washington_warn_raw.csv  wisconsin_warn_raw.csv
docs/: Makefile  al.md  az.md  ca.md  co.md  conf.py  contributing.md  contributing.rst  dc.md  de.md  getting-started.md  in.md  index.rst  job_center.md  ks.md  md.md  mo.md  ny.md  ok.md  or.md  reference.rst  releasing.md  requirements.txt  sources.md  states.rst  tally_sources.py  tx.md  usage.md  ut.md  va.md  vt.md  wi.md
docs/_templates/: sources.md  sources.md.tmpl
docs/scrapers/: al.md  az.md  ca.md  co.md  dc.md  de.md  ia.md  in.md  job_center.md  ks.md  md.md  me.md  mo.md  ny.md  ok.md  or.md  sc.md  tx.md  ut.md  va.md  vt.md  wi.md
docs/states/: or.md  sc.md
scrapers_py_scripts/: de_add_affected_employees.py  de_add_links_tofile.py  find_broken_crons.py  ks_add_affected_employees.py  ks_add_links_tofile.py  move_old_data.py  ok_add_affected_employees.py  ok_add_links_to_file.py  test_ne.py  warn_scraper_ak.py  warn_scraper_al.py  warn_scraper_az.py  warn_scraper_de.py  warn_scraper_ny.py  warn_scraper_ok.py  warn_scraper_ri.py  warn_scraper_sd.py  warn_uploads.py
scripts/: az_add_affected_employees.py  combine_ne_scrapers.py  run_scrapers.py  warn_scraper_fl.py  warn_scraper_in.py  warn_scraper_ks.py  warn_scraper_md.py  warn_scraper_mi.py  warn_scraper_mo.py  warn_scraper_ne.py  warn_scraper_ne2.py  warn_scraper_nj.py  warn_scraper_oh.py  warn_scraper_or.py  warn_scraper_ri.py  warn_scraper_tn.py
tests/: conftest.py  test_cache.py  test_delete.py  test_job_center.py  test_job_center_cache.py  test_openpyxl.py
tests/cassettes/: test_cached_detail_pages.yaml  test_cached_search_results.yaml  test_delete.yaml  test_iowa.yaml  test_missing_detail_page_values.yaml  test_no_results.yaml  test_paged_results.yaml  test_scrape_integration.yaml
tests/fixtures/: 2021_page_1.html  2021_page_2.html
warn/: __init__.py  __main__.py  cache.py  cli.py  runner.py  utils.py
warn/pdfrodent/: pdfrodent.py
warn/scrapers/: ak.py  al.py  ar.py  az.py  ca.py  co.py  ct.py  dc.py  de.py  fl.py  ga.py  hi.py  ia.py  id.py  il.py  in.py  ks.py  ky.py  la.py  ma.py  md.py  me.py  mi.py  mo.py  ms.py  mt.py  nd.py  ne.py  nj.py  nm.py  ny.py  ny_old.py  oh.py  ok.py  or.py  pa-test.ipynb  pa.py  ri.py  sc.py  sd.py  (+9 more)
